welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: ';' expected but ')' found.
		if (a<=b && b<=20) || (a>=20)){
                                             ^